<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="4dp">

    <ImageView
        android:id="@+id/image_item_fish"
        android:layout_width="110dp"
        android:layout_height="72dp"
        android:contentDescription="@string/fishies_photo"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_fish_name"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/fishies_name"
        app:layout_constraintEnd_toStartOf="@id/image_button_favorite"
        app:layout_constraintStart_toEndOf="@id/image_item_fish"
        app:layout_constraintTop_toTopOf="@id/image_item_fish" />

    <TextView
        android:id="@+id/text_water_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/water_type"
        app:layout_constraintBottom_toBottomOf="@id/image_item_fish"
        app:layout_constraintEnd_toEndOf="@id/text_fish_name"
        app:layout_constraintStart_toStartOf="@id/text_fish_name"
        app:layout_constraintTop_toBottomOf="@id/text_fish_name" />

    <ImageButton
        android:id="@+id/image_button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/button_add_favorite"
        android:padding="16dp"
        android:src="@drawable/button_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>