<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_do_mar"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewBlue"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonMenu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/purple_700"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="@id/viewBlue"
        app:layout_constraintEnd_toEndOf="@id/viewBlue"
        app:layout_constraintStart_toEndOf="@id/viewSearch"
        app:layout_constraintTop_toTopOf="@id/viewBlue" />

    <SearchView
        android:id="@+id/viewSearch"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/viewBlue"
        app:layout_constraintStart_toStartOf="@id/viewBlue"
        app:layout_constraintTop_toTopOf="@id/viewBlue" />

    <TextView
        android:id="@+id/textBetta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/betta_ou_peixe_de_briga_betta_splendens"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/imageBetta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBlue" />

    <ImageView
        android:id="@+id/imageBetta"
        android:layout_width="270dp"
        android:layout_height="203dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:scaleType="centerInside"
        android:src="@drawable/img"
        app:layout_constraintBottom_toTopOf="@id/textOrigin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBlue" />

    <TextView
        android:id="@+id/textOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/origem_sia_tail_ndia_mal_sia_e_vietn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBetta" />

    <TextView
        android:id="@+id/textComprimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/comprimento_m_ximo_10_cm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textOrigin" />

    <TextView
        android:id="@+id/textPH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ph_7_0_a_7_2"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textComprimento" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/temperatura_24_a_30_c"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPH" />

    <TextView
        android:id="@+id/textAquarium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/aqu_rio_pequeno_a_m_dio"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTemp" />

    <TextView
        android:id="@+id/textComportamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/comportamento_pac_fico_com_outros_peixes_mas_agressivo_entre_os_machos_da_mesma_esp_cie"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAquarium" />

</androidx.constraintlayout.widget.ConstraintLayout>
